<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/orange"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/id_change_mobile_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="18dp"
            android:src="@drawable/icon_return"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/change_mobile"
            android:textColor="@color/white"
            android:textSize="20sp"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@color/gray">
    </View>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="当前手机号码159****3577"
        android:textColor="@color/black"
        android:textSize="18sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="20dp"
            android:src="@drawable/icon_shield"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/verification"
            android:textColor="@color/lightblack"
            android:textSize="15sp"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/id_change_mobile_verification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:hint="@string/input_verification"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="20dp"
            android:gravity="bottom"
            android:text="@string/send_verification"
            android:textColor="@color/orange"
            android:textSize="15sp"/>

    </FrameLayout>

    <com.phillipcalvin.iconbutton.IconButton
        android:id="@+id/id_change_mobile_next"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginTop="70dp"
        android:background="@drawable/button_background_shape_radius"
        android:text="@string/register_nextstep"
        app:iconPadding="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColor="@color/orange"
        android:textSize="15sp"
        android:gravity="center_horizontal"
        android:text="@string/lost_mobile_number"/>

</LinearLayout>
