<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.youth.banner.Banner xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/home_banner"
        android:layout_width="match_parent"
        android:layout_height="130dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="35dp">

            <ImageView
                android:id="@+id/home_icon1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:background="@color/orange" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/home_icon1"
                android:gravity="center_vertical"
                android:text="@string/red_package" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="35dp">

            <ImageView
                android:id="@+id/home_icon2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:background="@color/orange" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/home_icon2"
                android:gravity="center_vertical"
                android:text="@string/present_card" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="35dp">

            <ImageView
                android:id="@+id/home_icon3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:background="@color/orange" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/home_icon3"
                android:gravity="center_horizontal"
                android:text="@string/recommend_present" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/home_icon4"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:background="@color/orange" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/home_icon4"
                android:gravity="center_horizontal"
                android:text="@string/monthly_discount" />
        </RelativeLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:background="@color/orange" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp">

                <ImageView
                    android:id="@+id/home_split_first"
                    android:layout_width="7dp"
                    android:layout_height="24dp"
                    android:background="@color/blue" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:text="@string/door_install"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/home_split_first"
                    android:text="@string/door_install_tip" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more"
                        android:textSize="15sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="5dp"
                        android:src="@drawable/icon_next" />
                </LinearLayout>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/home_door_install_tag_first"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bathroom"
                    android:textColor="@color/black"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/home_door_install_tag_second"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="90dp"
                    android:layout_toRightOf="@+id/home_door_install_tag_first"
                    android:text="@string/lamp"
                    android:textColor="@color/black"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/home_door_install_tag_third"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/home_door_install_tag_first"
                    android:text="@string/air_install"
                    android:textColor="@color/black"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/home_door_install_tag_forth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="90dp"
                    android:layout_toRightOf="@+id/home_door_install_tag_third"
                    android:text="@string/hot_water"
                    android:textColor="@color/black"
                    android:textSize="15dp" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
