<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/orange"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="18dp"
            android:src="@drawable/icon_return"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/setting_login_password"
            android:textColor="@color/white"
            android:textSize="20sp"/>

    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/id_register_setting_password_textInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/id_setting_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/input_correct_length_password"
            android:textSize="16sp"
            android:textColor="@color/gray"
            android:inputType="textPassword"
            android:paddingRight="10dp"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/setting_login_password_tips"
        android:textColor="@color/lightblack"
        android:textSize="12sp"/>

    <com.phillipcalvin.iconbutton.IconButton
        android:id="@+id/id_setting_login_password_ok"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_gravity="center_horizontal|bottom"
        android:background="@drawable/button_background_shape_radius"
        android:text="@string/setting_login_password_confirm"
        app:iconPadding="10dp" />

</LinearLayout>
